# Numerical_linear_algebra_basic_utils

./: CMakeLists.txt
src/: matrix.c  vector.c
src/include/: matrix.h  vector.h
